[gd_scene load_steps=15 format=2]

[ext_resource path="res://Import/IMG_6798.PNG" type="Texture" id=1]
[ext_resource path="res://Import/IMG_6804.PNG" type="Texture" id=2]
[ext_resource path="res://Import/IMG_6799.PNG" type="Texture" id=3]
[ext_resource path="res://Import/IMG_6797.PNG" type="Texture" id=4]
[ext_resource path="res://Import/IMG_6794.PNG" type="Texture" id=5]
[ext_resource path="res://Import/IMG_6803.PNG" type="Texture" id=6]
[ext_resource path="res://Import/IMG_6800.PNG" type="Texture" id=7]
[ext_resource path="res://Import/IMG_6801.PNG" type="Texture" id=8]
[ext_resource path="res://Import/IMG_6802.PNG" type="Texture" id=9]
[ext_resource path="res://Import/IMG_6793.PNG" type="Texture" id=10]
[ext_resource path="res://Import/IMG_6795.PNG" type="Texture" id=11]
[ext_resource path="res://Import/IMG_6796.PNG" type="Texture" id=12]
[ext_resource path="res://Scripts/Hallow_Buttons.gd" type="Script" id=13]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 2 ) ],
"loop": true,
"name": "Tree",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 7 ) ],
"loop": true,
"name": "Bat",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 1 ) ],
"loop": true,
"name": "Grave",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 9 ) ],
"loop": true,
"name": "Ghost",
"speed": 5.0
}, {
"frames": [ ExtResource( 11 ), ExtResource( 12 ) ],
"loop": true,
"name": "Skull",
"speed": 5.0
}, {
"frames": [ ExtResource( 10 ), ExtResource( 5 ) ],
"loop": true,
"name": "Pumpkin",
"speed": 5.0
} ]

[node name="Hallow_Buttons" type="Node2D" groups=[
"Hallow",
]]
script = ExtResource( 13 )

[node name="Move" type="Button" parent="."]
margin_left = 48.0
margin_top = 23.0
margin_right = 68.0
margin_bottom = 48.0
text = ">"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Close" type="Button" parent="."]
margin_left = 48.0
margin_right = 68.0
margin_bottom = 25.0
text = "x"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Animate" type="Button" parent="."]
margin_right = 48.0
margin_bottom = 48.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "Grave"
centered = false
[connection signal="button_down" from="Move" to="." method="_on_Move_button_down"]
[connection signal="button_up" from="Move" to="." method="_on_Move_button_up"]
[connection signal="pressed" from="Close" to="." method="_on_Close_pressed"]
[connection signal="pressed" from="Animate" to="." method="_on_Animate_pressed"]
